<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FootballCupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:text="@string/btnName" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/tvStart"
            android:textSize="72sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnET1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btn_extratime"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvPen1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tvStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPen1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:text="@string/btnName" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/tvStart"
            android:textSize="72sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnET2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btn_extratime"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvPen2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tvStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPen2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pen" />

    </LinearLayout>

</LinearLayout>